Cambios al ejercicio 10

--- a/Ejercicio10/formularioLS.html
+++ b/Ejercicio10/formularioLS.html
@@ -3,7 +3,7 @@
     <h1>Ingrese el comando a ejecutar y sus argumentos<h1>
     <FORM METHOD=GET ACTION="/cgi-bin/ejercicio10.cgi">
     Ingrese el Comando:
-    <input name="Comando" size=20 maxlength=50 valor=unValor>
+    <input name="Comando" size=20 maxlength=50 value="ls">
     <P></P>
     Ingrese los Argumentos:
     <input name="Argumentos" size=20 maxlength=50>
