--- a/Ejercicio10/index.html
+++ b/Ejercicio10/index.html
@@ -1,3 +1,3 @@
-<html><body><b>Listado de Servidores:</b><br />
-    <a href="./formulario.html">Servidor 1: 172.17.0.1</a><br /> 
+<html><body><b>Servidores:</b><br />
+    <a href="./recursos.html">Servidor 1: 172.17.0.1</a><br /> 
     </body></html>
